--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,8 @@
 	<name>JWT-Spring-Security</name>
 	<description>Authentication and Authorization Microservice for elearning Project</description>
 	<properties>
-		<java.version>8</java.version>
-		<maven.compiler.source>8</maven.compiler.source>
-		<maven.compiler.target>8</maven.compiler.target>
+		<java.version>11</java.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
